# vulkify

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  config.cmake.in
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
cmake/: CMakePresets.json  build_version.cmake  platform.cmake  utils.cmake
cmake/interface/: CMakeLists.txt
examples/: CMakeLists.txt  quick_start.cpp
examples/base/: CMakeLists.txt  base.cpp  base.hpp
examples/data/: attribution.txt
examples/data/shaders/: texture_mask.frag  texture_mask.frag.spv
examples/minimap/: CMakeLists.txt  mini_map.cpp  minimap.cpp
examples/quick_start/: CMakeLists.txt  quick_start.cpp
examples/shader/: CMakeLists.txt  shader.cpp
ext/: .gitignore  CMakeLists.txt
ext/src/stb/: CMakeLists.txt
ext/src/vma/: CMakeLists.txt
tools/: CMakeLists.txt  burn_shaders.sh
tools/shabu/: CMakeLists.txt  shabu.cpp
vulkify/: CMakeLists.txt  config.cmake.in  vulkify_headers.cmake
vulkify/include/vulkify/: vulkify.hpp
vulkify/include/vulkify/context/: builder.hpp  canvas.hpp  context.hpp  frame.hpp  space.hpp
vulkify/include/vulkify/core/: defines.hpp  dirty_flag.hpp  float_eq.hpp  geometry.hpp  handle.hpp  nvec.hpp  per_thread.hpp  pool.hpp  ptr.hpp  radian.hpp  rect.hpp  result.hpp  rgba.hpp  time.hpp  transform.hpp  unique.hpp  version.hpp  view.hpp
vulkify/include/vulkify/graphics/: atlas.hpp  bitmap.hpp  buffer.hpp  buffer_write.hpp  camera.hpp  descriptor_set.hpp  draw_instance_data.hpp  draw_model.hpp  draw_object.hpp  draw_params.hpp  drawable.hpp  geometry.hpp  geometry_buffer.hpp  gfx_resource.hpp  handle.hpp  handles.hpp  image.hpp  mesh2d.hpp  pipeline.hpp  pipeline_spec.hpp  pipeline_state.hpp  primitive.hpp  render_state.hpp  render_view.hpp  resource.hpp  shader.hpp  spir_v.hpp  surface.hpp  texture.hpp  texture_handle.hpp  z_order.hpp
vulkify/include/vulkify/graphics/detail/: draw_model.hpp  gfx_deferred.hpp  resource.hpp
vulkify/include/vulkify/graphics/primitives/: all.hpp  circle_shape.hpp  instanced_mesh.hpp  mesh.hpp  mesh2d.hpp  mesh_primitive.hpp  prop.hpp  quad_shape.hpp  shape.hpp  sprite.hpp  text.hpp
vulkify/include/vulkify/graphics/resources/: geometry_buffer.hpp  texture.hpp  texture_handle.hpp
vulkify/include/vulkify/instance/: cursor.hpp  display.hpp  event.hpp  event_queue.hpp  event_type.hpp  gamepad.hpp  gpu.hpp  headless_instance.hpp  icon.hpp  instance.hpp  instance_create_info.hpp  instance_enums.hpp  key_event.hpp  keyboard.hpp  monitor.hpp  mouse.hpp  vf_instance.hpp  video_mode.hpp  window_flags.hpp
vulkify/include/vulkify/pipeline/: pipeline.hpp  spec.hpp
vulkify/include/vulkify/ttf/: character.hpp  glyph.hpp  scribe.hpp  ttf.hpp  ttf_handle.hpp
vulkify/src/: CMakeLists.txt  vulkify_version.hpp.in
vulkify/src/context/: builder.cpp  canvas.cpp  context.cpp
vulkify/src/core/: geometry.cpp  rgba.cpp
vulkify/src/detail/: cache.hpp  cache2.hpp  canvas_impl.hpp  command_pool.cpp  command_pool.hpp  command_pool2.hpp  defer.hpp  defer_base.hpp  defer_queue.hpp  descriptor_set.hpp  descriptor_set_factory.hpp  detail.cpp  erased_ptr.hpp  gfx_allocation.hpp  gfx_allocations.hpp  gfx_buffer_image.hpp  gfx_command_buffer.hpp  gfx_device.hpp  gfx_font.hpp  handle_map.hpp  image_cache.hpp  maps_decl.hpp  pipeline_factory.cpp  pipeline_factory.hpp  render_pass.hpp  renderer.cpp  renderer.hpp  rotator.hpp  set_writer.hpp  shared_impl.hpp  spir_v.cpp  spir_v.hpp  trace.cpp  trace.hpp  verify.cpp  vk_device.hpp  vk_instance.cpp  vk_instance.hpp  vk_surface.cpp  vk_surface.hpp  (+6 more)
vulkify/src/detail/window/: window.cpp  window.hpp
vulkify/src/glsl/: default.frag  default.vert
vulkify/src/graphics/: atlas.cpp  bitmap.cpp  buffer.cpp  camera.cpp  draw_object.cpp  drawable.cpp  geometry.cpp  geometry_buffer.cpp  gfx_buffer.cpp  image.cpp  primitive.cpp  resource.cpp  shader.cpp  spir_v.cpp  surface.cpp  texture.cpp
vulkify/src/graphics/detail/: resource.cpp
vulkify/src/graphics/primitives/: circle_shape.cpp  mesh.cpp  quad_shape.cpp  shape.cpp  sprite.cpp  text.cpp
vulkify/src/graphics/resources/: geometry_buffer.cpp  resource.cpp  texture.cpp
vulkify/src/instance/: vf_instance.cpp
vulkify/src/pipeline/: pipeline.cpp
vulkify/src/spir_v/: default.frag.hpp  default.vert.hpp  frag.spv.hpp  vert.spv.hpp
vulkify/src/ttf/: ft.cpp  ft.hpp
